--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ test { // (2)
 }
 
 dependencies {
-    //(3)
     implementation('org.springframework.boot:spring-boot-starter-web')
+    //테스트
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 
     // Lombok 설정
@@ -33,4 +33,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
+    
+    // 스프링 부트용 Spring Data Jpa 추상화 라이브러리
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    // 인메모리형 관계형 데이터 베이스
+    implementation('com.h2database:h2')
 }
