--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,16 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+# ?? ??? ?? ??? ?? ?? ??
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
+# Mustache ??? ??? ??
+spring.mustache.charset=UTF-8
+
+# HTTP ??? ??? ??
+server.http.encoding.charset=UTF-8
+server.http.encoding.enabled=true
+server.http.encoding.force=true
