--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.mustache.charset=UTF-8
 server.http.encoding.charset=UTF-8
 server.http.encoding.enabled=true
 server.http.encoding.force=true
+
+spring.profiles.include=oauth
