스프링 시큐리티와 OAuth 2.0으로 로그인 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,11 @@ server.servlet.encoding.force=true
 spring.mustache.charset=UTF-8
 
 # HTTP ??? ??? ??
-server.http.encoding.charset=UTF-8
-server.http.encoding.enabled=true
-server.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
 
+# Oauth
 spring.profiles.include=oauth
+
+spring.session.store-type=jdbc
