--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,19 @@
-// 스프링 부트의 의존성들을 관리해주는 플러그인
-plugins {
+plugins { // (1)
+    //id 'org.springframework.boot' version '2.4.1' // RELEASE 삭제
     id 'org.springframework.boot' version '3.2.0' // RELEASE 삭제
-    id 'io.spring.dependency-management' version '1.1.4' //스프링부트의 의존성을 관리해주는 플러그인
+    id 'io.spring.dependency-management' version '1.1.4' //의존성을 관리해주는 플러그
     id 'java'
 }
 
-group 'com.jopjoldu.book'
+group 'com.jojoldu.book'
 version '1.0.4-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
+sourceCompatibility = 1.8
 
 java {
-    JavaVersion.VERSION_17 // Java 17로 업그레이드 (Spring Boot 3.x 최소 요구사항)
+    sourceCompatibility = JavaVersion.VERSION_17 // Java 17로 업그레이드 (Spring Boot 3.x 최소 요구사항)
 }
-// 원격저장소
+
+//원격 저장소
 repositories {
     mavenCentral()
 }
@@ -22,9 +24,8 @@ test { // (2)
 }
 
 dependencies {
-    // 프로젝트 개발에 필요한 의존성을 선언 하는 곳
     implementation('org.springframework.boot:spring-boot-starter-web')
-    // 테스트
+    //테스트
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 
     // Lombok 설정
@@ -35,17 +36,20 @@ dependencies {
 
     // 스프링 부트용 Spring Data Jpa 추상화 라이브러리
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    // 인메모리형 관계형 데이터 버이스
+    // 인메모리형 관계형 데이터 베이스
     implementation('com.h2database:h2')
-    // 머스타치 스타터 의존성 등록
     implementation('org.springframework.boot:spring-boot-starter-mustache')
 
-    // Spring Security OAuth2 클라이언트 스타터
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-
-    // Spring Security 기본 스타터 (보통 함께 사용)
+    // Spring Security 기본 스타터 (로그인 용)
     implementation 'org.springframework.boot:spring-boot-starter-security'
-
     implementation 'org.springframework.session:spring-session-jdbc'
+
+    // 스프링 시큐리티 설정
+    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
+
+    // 스프링 세션 등록
+    implementation('org.springframework.session:spring-session-jdbc')
+
+    testImplementation('org.springframework.security:spring-security-test')
 
 }
