배포 설정 추가 및 설정 파일 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,12 @@ spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 
 # Oauth
-spring.profiles.include=oauth
+spring.profiles.include=oauth,real-db
 
 spring.session.store-type=jdbc
+
+# EC2 도메인 주소를 baseUrl로 인식시키기 위해 추가
+server.address=ec2-54-180-39-239.ap-northeast-2.compute.amazonaws.com
+
+# 포트도 명시 (기본 8080이라면 생략 가능)
+server.port=8080
