--- a/build.gradle
+++ b/build.gradle
@@ -52,4 +52,5 @@ dependencies {
 
     testImplementation('org.springframework.security:spring-security-test')
 
+    implementation('org.mariadb.jdbc:mariadb-java-client')
 }
